--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="clock"></div>
     <div id="year"></div>
     <div id="countdown"></div>
-    <script src="Digiclock.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
